# mechanical-base

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  pyproject.toml  readme.md  ruff.toml  theory.ipynb
.claude/skills/generate-gdt/: SKILL.md
cad/: assembly.py  cantilever_beam.step  drawing.py  export_drawing.py  l_bracket.step  l_bracket_assy.step  layout_spec.yaml  model.py  validate.py
cad/drawing/: dimensions.py  drawing.py  export_drawing.py  layout.py  readme.md
cad/model/: assembly.py  model.py  validate_asm.py  validate_model.py
output/drawings/: l_bracket.dxf
output/fab/: l_bracket.step  l_bracket_assy.step
sim/: constants.py  frd_parser.py  inp_writer.py  mesh.py  model.py  result.py  solve.py  test_run.py
