[project]
name = "mechanical-model"
version = "1.0.0-beta"
requires-python = "==3.13.2"
dependencies = [
    "sympy>=1.13.0",
    "pint>=0.24.0",
    "uncertainties>=3.2.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "cadquery>=2.7.0",
    "pygccx @ git+https://github.com/calculix/pygccx.git",
]

[dependency-groups]
dev = [
    "black[d]>=26.3.1",
    "poethepoet>=0.32.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "pytest-cov>=6.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.16.0",
    "pip>=25.1.1",
]

[tool.poe.tasks]
format = "black ."
lint = "ruff check"
checks = ["format", "lint"]
notebook = "jupyter nbconvert --execute --inplace theory.ipynb"
build = { cmd = "python cad/model/model.py", env = { PYTHONPATH = "." } }
inspect-model = "bash -c 'nohup freecad cad/l_bracket.step &>/dev/null &'"
inspect-asm = { cmd = "python cad/model/assembly.py && nohup freecad cad/l_bracket_assy.step &>/dev/null &", env = { PYTHONPATH = "." } }
generate-model = "bash -c 'mkdir -p output/drawings && DISPLAY= PYTHONPATH=/usr/lib/freecad/lib:. xvfb-run -a python3 cad/drawing/export_drawing.py'"
generate-asm = { cmd = "bash -c 'mkdir -p output/fab && python cad/model/assembly.py && cp cad/l_bracket.step output/fab/ && cp cad/l_bracket_assy.step output/fab/ && echo \"Copied STEP + assembly to output/fab/\"'", env = { PYTHONPATH = "." } }
validate-model = { cmd = "python cad/model/validate_model.py", env = { PYTHONPATH = "." } }
validate-asm = { cmd = "python cad/model/validate_asm.py", env = { PYTHONPATH = "." } }
sim = "pytest -vv sim/"
cover = "pytest -vv --cov sim/"
review = "claude 'run code-reviewer agent against diff for quality and elegance'"
commit = "bash -c 'uv run poe checks && uv run poe cover && uv run poe review && git add -A && git cz && git push'"

[tool.coverage.run]
omit = ["*/test_*.py"]
